fix: contrast errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -368,7 +368,7 @@ footer {
   border-radius: 10px;
   border: none;
   background-color: #eee;
-  color: #888;
+  color: #333;
   font-weight: bold;
   cursor: pointer;
 }
